:closed_lock_with_key: Set up `XCConfig` for baseURL and update `.gitignore`

--- a/.gitignore
+++ b/.gitignore
@@ -137,4 +137,5 @@ xcuserdata
 /*.gcno
 **/xcshareddata/WorkspaceSettings.xcsettings
 
+XCConfig/*
 # End of https://www.toptal.com/developers/gitignore/api/macos,xcode,swift,swiftpackagemanager
