:wrench: Add CI-specific `Scheme` and `Configuration`
- Created a new Scheme and Configuration specifically for CI.
- Adjusted the project settings to ensure XCConfig files are properly loaded in CI environment.
- This resolves the issue where CI was unable to read XCConfig files.

--- a/.github/workflows/ios.yaml
+++ b/.github/workflows/ios.yaml
@@ -39,8 +39,7 @@ jobs:
           xcode-version: "15.2"
       - name: Set Default Scheme
         run: |
-          scheme_list=$(xcodebuild -list -json | tr -d "\n")
-          default=$(echo $scheme_list | ruby -e "require 'json'; puts JSON.parse(STDIN.gets)['project']['targets'][0]")
+          default="App-GitHub-CI"
           echo $default | cat >default
           echo Using default scheme: $default
       - name: Build
