--- a/.github/workflows/ios.yaml
+++ b/.github/workflows/ios.yaml
@@ -37,9 +37,13 @@ jobs:
         uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: "15.2"
+      - name: Create Shared.xcconfig
+        run: |
+        echo "${{ secrets.XCCONFIG }}" | base64 --decode > ./XCConfig/Shared.xcconfig
       - name: Set Default Scheme
         run: |
-          default="App-GitHub-CI"
+          scheme_list=$(xcodebuild -list -json | tr -d "\n")
+          default=$(echo $scheme_list | ruby -e "require 'json'; puts JSON.parse(STDIN.gets)['project']['targets'][0]")
           echo $default | cat >default
           echo Using default scheme: $default
       - name: Build
