XCConfig를 설정 및 모듈 링킹 (#4)
* :closed_lock_with_key: Set up `XCConfig` for baseURL and update `.gitignore`

* :coffin: Remove unused code

* :wrench: Add CI-specific `Scheme` and `Configuration`

- Created a new Scheme and Configuration specifically for CI.
- Adjusted the project settings to ensure XCConfig files are properly loaded in CI environment.
- This resolves the issue where CI was unable to read XCConfig files.

* :bug: Fix XCConfig bug

* :construction_worker: Add CI step to dynamically generate XCConfig

* :fire: Remove unused file

* :pencil2: Fix typo

* :bug: Add mkdir code to resolve bugs

--- a/.github/workflows/ios.yaml
+++ b/.github/workflows/ios.yaml
@@ -2,9 +2,9 @@ name: iOS CI workflow
 
 on:
   push:
-    branches: [ "feature/*" ]
+    branches: ["feature/*"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
     types: [labeled, opened, synchronize, reopened]
 
 jobs:
@@ -37,6 +37,12 @@ jobs:
         uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: "15.2"
+      - name: Create Shared.xcconfig
+        env:
+          APPCONFIG: ${{ secrets.XCCONFIG }}
+        run: |
+          mkdir XCConfig
+          echo $APPCONFIG | base64 --decode > ./XCConfig/Shared.xcconfig
       - name: Set Default Scheme
         run: |
           scheme_list=$(xcodebuild -list -json | tr -d "\n")
