:wrench: Allow loading images over HTTP in Xcode project

--- a/PyeonHaeng-iOS/Resources/Info.plist
+++ b/PyeonHaeng-iOS/Resources/Info.plist
@@ -4,5 +4,10 @@
 <dict>
 	<key>BaseURL</key>
 	<string>$(BASE_URL)</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 </dict>
 </plist>
