--- a/PyeonHaeng-iOS.xcodeproj/xcshareddata/xcschemes/DesignSystemApp.xcscheme
+++ b/PyeonHaeng-iOS.xcodeproj/xcshareddata/xcschemes/DesignSystemApp.xcscheme
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1520"
+   LastUpgradeVersion = "1530"
    version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
-      buildImplicitDependencies = "YES">
+      buildImplicitDependencies = "YES"
+      buildArchitectures = "Automatic">
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
@@ -14,9 +15,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "BAA4D9A82B5A1795005999F8"
-               BuildableName = "PyeonHaeng-iOS.app"
-               BlueprintName = "PyeonHaeng-iOS"
+               BlueprintIdentifier = "BAAF1D252BAFF1910001EA36"
+               BuildableName = "DesignSystemApp.app"
+               BlueprintName = "DesignSystemApp"
                ReferencedContainer = "container:PyeonHaeng-iOS.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -28,22 +29,9 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
-      <Testables>
-         <TestableReference
-            skipped = "NO"
-            parallelizable = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "BA28F1782B6155450052855E"
-               BuildableName = "PyeonHaeng-iOSTests.xctest"
-               BlueprintName = "PyeonHaeng-iOSTests"
-               ReferencedContainer = "container:PyeonHaeng-iOS.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-      </Testables>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Staging"
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -56,16 +44,12 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "BAA4D9A82B5A1795005999F8"
-            BuildableName = "PyeonHaeng-iOS.app"
-            BlueprintName = "PyeonHaeng-iOS"
+            BlueprintIdentifier = "BAAF1D252BAFF1910001EA36"
+            BuildableName = "DesignSystemApp.app"
+            BlueprintName = "DesignSystemApp"
             ReferencedContainer = "container:PyeonHaeng-iOS.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <LocationScenarioReference
-         identifier = "com.apple.dt.IDEFoundation.CurrentLocationScenarioIdentifier"
-         referenceType = "1">
-      </LocationScenarioReference>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -77,9 +61,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "BAA4D9A82B5A1795005999F8"
-            BuildableName = "PyeonHaeng-iOS.app"
-            BlueprintName = "PyeonHaeng-iOS"
+            BlueprintIdentifier = "BAAF1D252BAFF1910001EA36"
+            BuildableName = "DesignSystemApp.app"
+            BlueprintName = "DesignSystemApp"
             ReferencedContainer = "container:PyeonHaeng-iOS.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
