--- a/.gitignore
+++ b/.gitignore
@@ -137,5 +137,10 @@ xcuserdata
 /*.gcno
 **/xcshareddata/WorkspaceSettings.xcsettings
 
-XCConfig/*
+
 # End of https://www.toptal.com/developers/gitignore/api/macos,xcode,swift,swiftpackagemanager
+
+### Custom ###
+XCConfig/*
+GoogleService-Info.plist
+
