--- a/.github/workflows/ios.yaml
+++ b/.github/workflows/ios.yaml
@@ -1,10 +1,8 @@
 name: iOS CI workflow
 
 on:
-  push:
-    branches: ['**']
   pull_request:
-    branches: ['**']
+    branches: ["**"]
     types: [labeled, opened, synchronize, reopened]
 
 jobs:
@@ -28,7 +26,7 @@ jobs:
 
   build:
     name: Build and Test default scheme using any available iPhone simulator
-    runs-on: macos-13
+    runs-on: macos-latest
 
     steps:
       - name: Checkout
@@ -36,7 +34,7 @@ jobs:
       - name: Select Xcode
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: "15.2"
+          xcode-version: "15.4"
       - name: Create Shared.xcconfig
         env:
           APPCONFIG: ${{ secrets.XCCONFIG }}
