--- a/.github/workflows/ios.yaml
+++ b/.github/workflows/ios.yaml
@@ -4,6 +4,8 @@ on:
   pull_request:
     branches: ["**"]
     types: [labeled, opened, synchronize, reopened]
+  push:
+    branches: main
 
 jobs:
   check-swift-format:
